# BrewApps

./: .gitignore  CMakeLists.txt  ReadMe.md
brew_benchmark/: CMakeLists.txt  benchmark.h  brew_benchmark.bar  brew_benchmark.bid  brew_benchmark.brh  brew_benchmark.brx  brew_benchmark.c  brew_benchmark.mfx  brew_benchmark.mif  dhry_1.c  dhry_2.c  phases.c
brew_fire_effect/: CMakeLists.txt  brew_fire_effect.bid  brew_fire_effect.c  brew_fire_effect.mfx  brew_fire_effect.mif
