########################################################################################################################
# CMake build script for Qualcomm BREW: 27-Jun-2024
#
cmake_minimum_required(VERSION 3.16)

########################################################################################################################
# Project section: General
#
project(BrewApps)

add_subdirectory(brew_benchmark)
